# v8-error

./: .gitignore  .prettierignore  app.json  babel.config.js  index.js  metro.config.js  package.json  tsconfig.json
android/: build.gradle  gradle.properties  settings.gradle
android/app/: _BUCK  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/jni/: MainApplicationModuleProvider.h  MainApplicationTurboModuleManagerDelegate.cpp  MainApplicationTurboModuleManagerDelegate.h  MainComponentsRegistry.h
android/app/src/main/res/drawable/: add.xml  (+14 more)
android/bindings/: build.gradle
android/bindings/src/main/: AndroidManifest.xml
android/bindings/src/main/assets/: editor.platform.js
android/bindings/src/main/cpp/: CMakeLists.txt  hlp_bindings.hpp  native_install.cpp
cpp/: hlp_CallInvokerGetter.h  hlp_macros.h
cpp/fs/: fs.cpp  fs.hpp
cpp/uv/: uv.cpp  uv.hpp
ios/: Podfile
ios/ExpLibuv/: AppDelegate.h  AppDelegate.mm  HolepunchBindingsModule.h  HolepunchBindingsModule.mm  Info.plist  LaunchScreen.storyboard  UIView+IAY.h  UIView+IAY.m
ios/ExpLibuv.xcodeproj/: project.pbxproj
ios/ExpLibuv.xcodeproj/xcshareddata/xcschemes/: ExpLibuv.xcscheme
ios/ExpLibuv.xcworkspace/: contents.xcworkspacedata
ios/ExpLibuv/Images.xcassets/LaunchIcon.imageset/: Contents.json
ios/ExpLibuv/Images.xcassets/icons/recents.imageset/: Contents.json
ios/ExpLibuv/Images.xcassets/icons/send_active.imageset/: Contents.json
ios/ExpLibuv/Images.xcassets/icons/tab_call.imageset/: Contents.json
ios/ExpLibuv/Images.xcassets/icons/tab_chat.imageset/: Contents.json
ios/ExpLibuv/Images.xcassets/icons/tab_participants.imageset/: Contents.json
ios/ExpLibuvTests/: ExpLibuvTests.m
prebuilt/: .gitignore
prebuilt/ios/uv/uv.xcframework/: Info.plist
prebuilt/ios/uv/uv.xcframework/ios-arm64/: libuv.1.dylib
prebuilt/ios/uv/uv.xcframework/ios-arm64_x86_64-simulator/: libuv.1.dylib
src/binding/: events.js  native.ts  os.js  polyfills.js  util.js
src/binding/fs/: constants.js  extension.js  index.js  promises.js  util.js
test/: all.js  v8.js
test/raf/: basic.js  index.js  lock.js
(+17 files in other folders)
